# openvc

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  STYLE_GUIDE.md  bootstrap  configure.ac
.travis/: before_install.sh  script.sh
examples/: Makefile-posix  Makefile.am
examples/apps/: Makefile.am
examples/apps/cli/: Makefile.am  main.c
include/: Makefile.am
include/openvc/: Makefile.am  cli.h  config.h  error.h  instance.h  tasklet.h
include/openvc/platform/: Makefile.am  alarm-micro.h  alarm-milli.h  debug_uart.h  logging.h  memory.h  misc.h  random.h  time.h  toolchain.h  uart.h
script/: bootstrap  clang-format-check.sh  clang-format.sh
src/: Makefile.am
src/cli/: Makefile.am  cli.cpp  cli.hpp  cli_config.h  cli_server.cpp  cli_server.hpp  cli_uart.cpp  cli_uart.hpp
src/core/: Makefile.am  openvc-core-config.h  openvc-core-default-config.h
src/core/api/: instance_api.cpp  tasklet_api.cpp
src/core/common/: code_utils.hpp  debug.hpp  encoding.hpp  instance.cpp  instance.hpp  locator-getters.hpp  locator.cpp  locator.hpp  logging.cpp  logging.hpp  new.hpp  owner-locator.hpp  random.hpp  string.cpp  string.hpp  tasklet.cpp  tasklet.hpp  time.hpp  timer.cpp  timer.hpp
src/core/config/: logging.h  openvc-core-default-config.h  platform.h
src/core/crypto/: aes_ccm.cpp  aes_ccm.hpp  aes_ecb.cpp  aes_ecb.hpp  ecdsa.cpp  ecdsa.hpp  hmac_sha256.cpp  hmac_sha256.hpp  mbedtls.cpp  mbedtls.hpp  sha256.cpp  sha256.hpp
src/core/utils/: heap.cpp  heap.hpp  missing_strlcat.c  missing_strlcpy.c  missing_strnlen.c  parse_cmdline.cpp  parse_cmdline.hpp  static_assert.hpp  wrap_stdbool.h  wrap_stdint.h  wrap_string.h
tests/: Makefile.am
tests/unit/: Makefile.am  test_aes.cpp  test_heap.cpp  test_platform.cpp  test_platform.h  test_timer.cpp  test_util.h
tools/: Makefile.am
