include $(abs_top_nlbuild_autotools_dir)/automake/pre.am

DIST_SUBDIRS                            = \
    openvc                                \
    $(NULL)

SUBDIRS                                 = \
    openvc                                \
    $(NULL)

PRETTY_SUBDIRS                          = \
    openvc                                \
    $(NULL)

install-headers: install-includeHEADERS

include $(abs_top_nlbuild_autotools_dir)/automake/post.am
