include $(abs_top_nlbuild_autotools_dir)/automake/pre.am

DIST_SUBDIRS                            = \
    cli                                   \
    $(NULL)

SUBDIRS                                 = \
    $(NULL)

if OPENVC_ENABLE_CLI
SUBDIRS                                += cli
endif

PRETTY_SUBDIRS                          = \
    cli                                   \
    $(NULL)

include $(abs_top_nlbuild_autotools_dir)/automake/post.am
